syntax = "proto3";
package kk_etcd;
option go_package = "/api_def";
//snapshot restore
message SnapshotRestore {
  message Input {

  }

  message Output {
    string  CmdStr = 1;
  }
}